[Optimization] Migrated to Java 10. Changed the app icon. Made minor improvements in Wishlist, Settings, Booking History